--- a/srcs/containers/frontend/volume-frontend/public/style.css
+++ b/srcs/containers/frontend/volume-frontend/public/style.css
@@ -2,9 +2,9 @@
     background-color: #FFC200;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: bottom;
     width: 100%;
-    height: 150px;
+    height: 200px;
 }
 
 @font-face {
@@ -14,7 +14,7 @@
 
 .title {
     color: white;
-    font-size: 75px;
+    font-size: 100px;
     border-color: black;
     font-family: "Action Man";
 }
