--- a/srcs/containers/frontend/volume-frontend/public/style.css
+++ b/srcs/containers/frontend/volume-frontend/public/style.css
@@ -2,7 +2,7 @@
     background-color: #FFC200;
     display: flex;
     justify-content: center;
-    align-items: bottom;
+    align-items: center;
     width: 100%;
     height: 200px;
 }
@@ -14,7 +14,7 @@
 
 .title {
     color: white;
-    font-size: 100px;
+    font-size: 120px;
     border-color: black;
     font-family: "Action Man";
 }
