anyadiendo verificacion de nombre de usuario, email y encryptando contrasenya en base de datos

--- a/srcs/containers/frontend/volume-frontend/public/style.css
+++ b/srcs/containers/frontend/volume-frontend/public/style.css
@@ -174,12 +174,15 @@
     background-image: url('./images/goBack.png');
     background-size: cover;
     background-repeat: no-repeat;
-    border-color: black;
-    border-width: 3px;
     width: 58px;
     height: 58px;
     margin-bottom: 23px;
     margin-right: 20px;
     line-height: 58px;
-    border-radius: 6px;
+    border: none;
+    cursor: pointer;
+}
+
+.register-goback-button:active {
+    transform: scale(0.9);
 }
