--- a/srcs/containers/frontend/volume-frontend/public/style.css
+++ b/srcs/containers/frontend/volume-frontend/public/style.css
@@ -58,6 +58,14 @@
     width: 100%;
 }
 
+.div-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
 .login {
     display: flex;
     flex-direction: row;
@@ -185,4 +193,27 @@
 
 .register-goback-button:active {
     transform: scale(0.9);
+}
+
+.overlay-popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    background: rgba(0,0,0,0.6);
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
+
+.popup {
+    display: flex;
+    flex-direction: column;
+    background: white;
+    padding: 25px;
+    border-radius: 10px;
+    text-align: center;
+    min-width: 300px;    
 }
