--- a/srcs/containers/frontend/volume-frontend/public/style.css
+++ b/srcs/containers/frontend/volume-frontend/public/style.css
@@ -229,10 +229,7 @@
     border-radius: 10px;
     text-align: center;
     min-width: 500px;
-    height: 196px;   
-}
-
-.send-forgot-pass-success {
+    height: 196px;
     display: flex;
     justify-content: center;
     text-align: center;
@@ -246,4 +243,15 @@
     text-align: center;
     font-family: Arial, sans-serif;
     color: #F75736;
+}
+
+.change-password-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 500px;
+    height: 400px;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: #878787 0px 8px 16px;
 }
