--- a/srcs/containers/frontend/volume-frontend/public/style.css
+++ b/srcs/containers/frontend/volume-frontend/public/style.css
@@ -229,7 +229,7 @@
     border-radius: 10px;
     text-align: center;
     min-width: 500px;
-    height: 196px;
+    height: 230px;
     display: flex;
     justify-content: center;
     text-align: center;
@@ -237,7 +237,7 @@
     color: #36F740;
 }
 
-.send-forgot-pass-fail {
+.send-forgot-pass-text {
     display: flex;
     justify-content: center;
     text-align: center;
@@ -254,4 +254,15 @@
     background-color: white;
     border-radius: 8px;
     box-shadow: #878787 0px 8px 16px;
+}
+
+.close-tab-button {
+    width: 100%;
+    height: 100%;
+    border-radius: 6px;
+    background-image: url('./images/close_tab.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    border: none;
 }
